2006-02-07  MenTaLguY  <mental@rydia.net>

    * src/debug/gc-heap.h, src/debug/logger.cpp, src/debug/sysv-heap.h,
      src/jabber_whiteboard/deserializer.cpp, src/sp-object.cpp,
      src/util/share.h, src/xml/simple-node.cpp:

      share_static -> share_static_string

2006-02-07  Michael Wybrow  <mjwybrow@users.sourceforge.net>

	* src/jabber_whiteboard/message-utilities.h,
	  src/jabber_whiteboard/serializer.cpp,
	  src/jabber_whiteboard/deserializer.cpp,
	  src/jabber_whiteboard/message-utilities.cpp,
	  src/ui/dialog/whiteboard-connect.cpp:
	
	Some fixes to allow the codebase to compile with Inkboard support
	after the recent Util::shared_ptr<> and Dialog::present() changes.

2006-02-05  Marco Scholten  <mscholtn@xs4all.nl>

	* src/verbs.cpp: updated to make double clicking a tool button
      open the new preferences dialog.
	* src/ui/dialog/inkscape-preferences.cpp: updated to enable opening
      the dialog on the correct page.
	* src/ui/dialog/dialog.cpp: added virtual void present() so that
      InkscapePreferences::present() will be called from 
      DialogManager::showDialog()

2006-02-05  MenTaLguY  <mental@rydia.net>

	* src/debug/event.h, src/debug/gc-heap.h, src/debug/heap.h,
	  src/debug/logger.cpp, src/debug/simple-event.h, src/debug/sysv-heap.h,
	  src/jabber_whiteboard/deserializer.cpp,
	  src/jabber_whiteboard/message-utilities.cpp,
	  src/jabber_whiteboard/message-utilities.h,
	  src/jabber_whiteboard/node-tracker-observer.h,
	  src/jabber_whiteboard/node-utilities.cpp,
	  src/jabber_whiteboard/serializer.cpp,
	  src/jabber_whiteboard/serializer.h,
	  src/sp-object.cpp, src/util/Makefile_insert, src/util/share.cpp,
	  src/util/shared-c-string-ptr.cpp, src/util/shared-c-string-ptr.h,
	  src/util/share.h, src/xml/attribute-record.h, src/xml/comment-node.h,
	  src/xml/composite-node-observer.cpp, src/xml/composite-node-observer.h,
	  src/xml/event.cpp, src/xml/event.h, src/xml/log-builder.cpp,